bpy.ops.render.render() not working with scene in VSE #43429

Closed
opened 2015-01-27 12:11:05 +01:00 by Gottfried Hofmann · 5 comments

System Information
Win7 64bit nVidia Quadro 4000

Blender Version
Broken: 2.73a, 2.73
Worked: (optional)

Short description of error

when having a scene in the sequencer, bpy.ops.render.render() will just produce an empty image. When turning off sequencer, it works as expected.

Exact steps for others to reproduce the error

bpy.ops.render.render.bug.blend

Open above .blend - type bpy.ops.render.render() in console - you get an empty image and 0sec render time. Turn off sequencer in "post processing" and type the line again - render works as expected.

**System Information** Win7 64bit nVidia Quadro 4000 **Blender Version** Broken: 2.73a, 2.73 Worked: (optional) **Short description of error** when having a scene in the sequencer, bpy.ops.render.render() will just produce an empty image. When turning off sequencer, it works as expected. **Exact steps for others to reproduce the error** [bpy.ops.render.render.bug.blend](https://archive.blender.org/developer/F139577/bpy.ops.render.render.bug.blend) Open above .blend - type bpy.ops.render.render() in console - you get an empty image and 0sec render time. Turn off sequencer in "post processing" and type the line again - render works as expected.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @GottfriedHofmann

Added subscriber: @GottfriedHofmann

This issue was referenced by 58f7deca58

This issue was referenced by 58f7deca583aea1b5a1654965eb96b8441d8db98

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 58f7deca58.

Closed by commit 58f7deca58.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43429
No description provided.