Fix T43429: bpy.ops.render.render() not working with scene in VSE

Was a mistake in threading conflict prevention condition.